# pumprecovery

./: .gitignore  README.md
idl/: pump.json
keys/: withdraw-authority.json
keys/discovered/: staccs-MBP-20240624-dummy2.json  staccs-MBP-20240624-id.json
pump/editfrontend/: .env  CODEOWNERS  README.md  tailwind.config.ts
pump/editfrontend/app/: globals.css
pump/editfrontend/components/: CoinsCreated.tsx  CommentInput.tsx  EditProfile.tsx  LatestCoin.tsx  LatestTrade.tsx  NavBar.tsx  Notifications.tsx  RaydiumTradeBox.tsx  SelectedChain.tsx  Thread.tsx  Transactions.tsx  Wallet.tsx  WalletWithoutAuth.tsx
pump/editfrontend/constants/: solana-transactions.ts
pump/editfrontend/hooks/: useBondingCurve.ts  useCandlesticks.ts  useCoins.ts  useComments.ts  useInitialBondingCurveParams.ts  useKingOfTheHill.ts  useLatestTrade.ts  useModeratorLogs.ts  useNotifications.ts
pump/editfrontend/idl/: pump.json
pump/editfrontend/providers/: LinkedXProvider.tsx  SocketProvider.tsx
pump/editfrontend/utils/: getPastelColor.ts  lamportsToSol.ts
pump/kothanimate/: .env  bs58.d.ts  package.json
pump/kothanimate/app/: layout.tsx
pump/kothanimate/components/: Balances.tsx  CoinPreview.tsx  CommentInput.tsx  EditProfile.tsx  ErrorMessage.tsx  Followers.tsx  FollowingFeed.tsx  Info.tsx  KingOfTheHill.tsx  (+7 more)
pump/openai-pump-fun/: afile.txt  inputs.json  outputs.json  outputs.jsonl  outputs2.json  package.json  somepython.js  somepython.py  somepython2.py  users.json  users.ts
pump/pump-amm/: Anchor.toml  Cargo.toml
pump/pump-cache-server/: .env  package.json
pump/pump-contracts-solana/: .gitignore  Anchor.toml  Cargo.toml  README.md  fix-program.js  harness.sh  init.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
pump/pump-contracts-solana/programs/pump/: Cargo.toml
pump/pump-contracts-solana/programs/pump/src/: lib.rs
pump/pump-real-amm/: Anchor.toml
pump/pump-real-amm/programs/pump-v2-amm/: Cargo.toml
pump/pump-real-amm/programs/pump-v2-amm/fuzz/: Cargo.toml
pump/pump-real-amm/programs/pump-v2-amm/fuzz/src/: account_state.rs
pump/pump-real-amm/programs/pump-v2-amm/src/: error.rs  fixtures.rs  lib.rs  state.rs
pump/pump-real-amm/programs/pump-v2-amm/src/instructions/: accept_admin.rs  add_liquidity.rs  buy.rs  create.rs  initialize.rs  mod.rs  remove_liquidity.rs  sell.rs  set_parameters.rs
pump/pump-v2-amm/: .gitignore  Cargo.toml
pump/pump-v2-amm/programs/pump-v2-amm/: Cargo.toml
pump/pump-v2-amm/programs/pump-v2-amm/src/: fixtures.rs  lib.rs  state.rs  utils.rs
pump/pump-v2-amm/programs/pump-v2-amm/src/instructions/: add_liquidity.rs  buy.rs  create.rs  mod.rs  remove_liquidity.rs  sell.rs  set_parameters.rs
pump/pump-v2-amm/trident-tests/poc_tests/: Cargo.toml
pump/pump-v2-amm/trident-tests/poc_tests/tests/: test.rs
pump/pump-v2-client-server/: .env  package.json  vercel.json
pump/pump-v2-frontend/: .env.example  .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  vercel.json
pump/pump-v2-metrics-server/: .gitignore  package.json
pump/pump-v2-server/: .env  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
pump/pumpagainfe/: package.json
pump/pumpitydooda/: Anchor.toml
pump/pumpitydumpity/: .gitignore  Anchor.toml  README.md  package.json
pump/rune-pump/: .gitignore  README.md  bondingCurve.js  client.js  index.html  package.json  psbtManager.js  runeMinting.js  server.js
pump/stacc-show/: .gitignore  README.md  package.json
solana-config/cli/: config.yml
solana-config/install/: config.yml
src/: main.ts
src/candlesticks/: candlesticks.service.ts
src/coins/: coins.gateway.ts
src/comments/: comments.service.ts
src/config/: configuration.ts
src/event-listener/: event-listener.controller.ts  event-listener.service.ts
src/messages/: messages.controller.ts  messages.service.ts
src/orchestrator/: orchestrator.module.ts
src/seed-pool/: seed-pool.controller.ts
src/social-auth/: jwt-strategy.strategy.ts  social-auth.module.ts
src/users/: users.controller.ts
test-ledger/: faucet-keypair.json
top-json/: package-lock.json  package.json
uniswap-auctions/: .env.example  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
uniswap-auctions/app/: globals.css  layout.tsx  providers.tsx
uniswap-auctions/components/: AuctionCard.tsx  AuctionChart.tsx  AuctionProgress.tsx  BidBox.tsx  ChainBadge.tsx  CopyCa.tsx  Countdown.tsx  KingOfTheHill.tsx  NavBar.tsx  WalletButton.tsx
uniswap-auctions/hooks/: useAuctions.ts
uniswap-auctions/lib/: chains.ts  create.ts  doppler.ts  format.ts  seed.ts  trade.ts  types.ts  wagmi.ts
(+4581 files in other folders)
