[package]
name = "pump-v2-amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_v2_amm"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.30.0", features=["event-cpi"]} 
anchor-spl = "0.30.0"
bytemuck = "1.15.0"
num-integer = "0.1.46"
solana-program = "1.18.12"
spl-associated-token-account = "3.0.2"
spl-token = "4.0.0"
spl-token-2022 = "3.0.2"

[dev-dependencies]
solana-transaction-status = "*"
anchor-client = "0.30.0"
solana-program-test = "1.18.12"
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.18.12"
solana-client = "1.18.12"
borsh = "0.9"
switchboard-solana = "*"
spl-associated-token-account = "3.0.2"

