[package]
name = "pump-v2-amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_v2_amm"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.30.0"} # remove this in prod only viable for fuzz testsx
anchor-spl = "0.30.0"
bytemuck = "1.15.0"
num-integer = "0.1.46"
solana-program = "*"
spl-token = "4.0.0"
spl-token-2022 = {version="*", features=["no-entrypoint"]}

[dev-dependencies]
solana-transaction-status = "*"
anchor-client = "0.30.0"
solana-program-test = "*"
tokio = { version = "1", features = ["full"] }
solana-sdk = "*"
solana-client = "*"
borsh = "1"
switchboard-solana = "*"
spl-associated-token-account = "^1"

