[package]
name = "poc_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"

[dev-dependencies.trident-client]
path = "../../../trident/crates/client"

[dev-dependencies.program_client]
path = "../../.program_client"

[dev-dependencies.pump-v2-amm]
path = "../../programs/pump-v2-amm"
