[package]
name = "pump-amm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "lend"
path = "fuzz_targets/lend.rs"
test = false
doc = false

[dependencies]
spl-associated-token-account = "*"
switchboard-solana = "*"
anchor-lang = {version="0.30.0", features=["event-cpi"]}
anchor-spl = "0.30.0"
num-integer = "0.1.46"
spl-token = "4.0.0"
spl-token-2022 = "3.0.2"
solana-sdk = "1.16.23"
solana-program = "1.16.23"
ahash = "=0.8.8"

anyhow = "1.0.68"
arbitrary = { version = "1.3.2", features = ["derive"] }
bumpalo = "=3.11.1"
libfuzzer-sys = "0.4"
safe-transmute = "0.11.2"
rand = "0.8.5"
bytemuck = "1.12.3"
fixed = "1.21.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", optional = true }
log4rs = { version = "1.2.0", optional = true }
once_cell = "1.17.1"

[features]
capture_log = ["log", "log4rs"]

[dependencies.pump-v2-amm]
path = ".."
features = ["no-entrypoint"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1
[[bin]]
name = "pump-v2-amm"
path = "fuzz_targets/pump-v2-amm.rs"
test = false
doc = false
bench = false
